force-app/main/default/objects/DD_Claim_Line__c/DD_Claim_Line__c.object-meta.xml
<CustomObject>
    <description>Per-CDT-code procedure line on a dental claim</description>
    <label>Claim Line</label>
    <nameField><displayFormat>CLL-{000000}</displayFormat><label>Line ID</label><type>AutoNumber</type></nameField>
    <pluralLabel>Claim Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>