force-app/main/default/objects/DD_Claim_Line__c/fields/Allowed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Amount__c</fullName>
    <label>Allowed Amount</label>
    <type>Currency</type>
    <precision>18</precision><scale>2</scale><required>false</required>
    <description>Allowed per fee schedule</description>
</CustomField>