force-app/main/default/objects/DD_Claim_Line__c/fields/Charged_Amount__c.field-meta.xml
<CustomField>
    <fullName>Charged_Amount__c</fullName>
    <label>Charged Amount</label>
    <type>Currency</type>
    <precision>18</precision><scale>2</scale><required>true</required>
    <description>Provider billed</description>
</CustomField>