force-app/main/default/objects/DD_Claim_Line__c/fields/Claim__c.field-meta.xml
<CustomField>
    <fullName>Claim__c</fullName>
    <label>Claim</label>
    <type>MasterDetail</type>
    <referenceTo>DD_Claim__c</referenceTo><relationshipLabel>Claim Lines</relationshipLabel><relationshipName>Claim_Lines</relationshipName><relationshipOrder>0</relationshipOrder><reparentableMasterDetail>false</reparentableMasterDetail><writeRequiresMasterRead>false</writeRequiresMasterRead>
    <description>Parent claim</description>
</CustomField>