force-app/main/default/objects/DD_Claim_Line__c/fields/Coinsurance_Applied__c.field-meta.xml
<CustomField>
    <fullName>Coinsurance_Applied__c</fullName>
    <label>Coinsurance Applied</label>
    <type>Currency</type>
    <precision>18</precision><scale>2</scale><required>false</required>
    <description>Member coinsurance</description>
</CustomField>