force-app/main/default/objects/DD_Claim_Line__c/fields/Deductible_Applied__c.field-meta.xml
<CustomField>
    <fullName>Deductible_Applied__c</fullName>
    <label>Deductible Applied</label>
    <type>Currency</type>
    <precision>18</precision><scale>2</scale><required>false</required>
    <description>Deductible portion</description>
</CustomField>