force-app/main/default/objects/DD_Claim_Line__c/fields/Denial_Reason__c.field-meta.xml
<CustomField>
    <fullName>Denial_Reason__c</fullName>
    <label>Denial Reason</label>
    <type>Text</type>
    <length>255</length><required>false</required><unique>false</unique><externalId>false</externalId>
    <description>Denial or reduction reason</description>
</CustomField>