force-app/main/default/objects/DD_Claim_Line__c/fields/Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Paid_Amount__c</fullName>
    <label>Paid Amount</label>
    <type>Currency</type>
    <precision>18</precision><scale>2</scale><required>false</required>
    <description>Plan paid amount</description>
</CustomField>