force-app/main/default/objects/DD_Claim_Line__c/fields/Surface__c.field-meta.xml
<CustomField>
    <fullName>Surface__c</fullName>
    <label>Surface</label>
    <type>Text</type>
    <length>10</length><required>false</required><unique>false</unique><externalId>false</externalId>
    <description>Tooth surface codes M/O/D/B/L</description>
</CustomField>