force-app/main/default/objects/DD_Claim_Line__c/fields/Tooth_Number__c.field-meta.xml
<CustomField>
    <fullName>Tooth_Number__c</fullName>
    <label>Tooth Number</label>
    <type>Text</type>
    <length>5</length><required>false</required><unique>false</unique><externalId>false</externalId>
    <description>Tooth number 1-32 or A-T</description>
</CustomField>